# ccc

./: .gitignore  build  ccc.cabal  flake.nix
proofs/: Affine.agda  Linear.agda  Linear.agdai  Unrestricted.agda  Unrestricted.agdai  UnrestrictedAssoc.agda  UnrestrictedNAry.agda
src/: CAM.hs  Expr.hs  ExprC.hs  Linear.hs  SSA.hs  Unrestricted.hs
src/CAM/: Inst.hs
src/Posts/: Variables.lhs
src/Unrestricted/: SSA.hs
