cabal-version:      2.4
name:               ccc
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
  exposed-modules:  
    CAM
    CAM.Inst
    Expr
    ExprC
  build-depends:    base ^>=4.16.1.0
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall
